--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,11 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.6.0",
     "react-infinite-scroll-component": "^6.1.0",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "react-icons": "^4.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +50,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.12",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8"
   }
